<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="分享须知"
        android:textColor="@color/black"
        android:textSize="@dimen/textLargeSize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="6dp"
            android:paddingLeft="10dp"
            android:text="1、"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_1"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingLeft="10dp"
            android:text="2、"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_2"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingLeft="10dp"
            android:text="3、"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />

        <TextView
            android:id="@+id/tvInformation3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_3"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingLeft="10dp"
            android:text="4、"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_4"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingLeft="10dp"
            android:text="5、"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_5"
            android:textColor="@color/black"
            android:textSize="@dimen/textMediumSize" />
    </LinearLayout>
</LinearLayout>
